# lavendeux-parser3

./: .gitignore  Cargo.toml  build.rs  build_stdlib.bat  build_stdlib.sh  tokenizer.xp.rs
benches/: benchmark_macro.rs
example_scripts/: emoji.lav  gpt.lav  self_test.lav  zarbans_grotto.lav
examples/: interactive_console.rs
src/: compiler.rs  error.rs  lavendeux.rs  lexer.rs  lib.rs  literals.rs  main.rs  parser.rs  pratt.rs  stack.rs  tokenizer.rs  traits.rs  types.rs  value.rs  vm.rs
src/compiler/: asm_transcoder.rs  compiler.rs  debug_profile.rs  error.rs  function_docs.rs
src/lexer/: category.rs  error.rs  rule.rs  stack.rs  token.rs
src/parser/: arithmetic.rs  assignment.rs  bitwise.rs  boolean.rs  collections.rs  conditionals.rs  core.rs  error.rs  expr.rs  function_compiler.rs  functions.rs  iterators.rs  literals.rs  macros.rs  nodes.rs  pratt.rs  special_functions.rs  traits.rs
src/parser/nodes/: arithmetic.rs  assignment.rs  bitwise.rs  boolean.rs  collections.rs  conditionals.rs  core.rs  expr.rs  functions.rs  iterators.rs  literals.rs
src/types/: currency.rs
src/value/: error.rs  function.rs  indexing.rs  number.rs  primitive.rs  reference.rs  traits.rs  types.rs
src/vm/: error.rs  execution_context.rs  load_stdlib.rs  memory_manager.rs  opcodes.rs  value_source.rs  virtual_machine.rs
src/vm/execution_context/: alu.rs  collections.rs  control.rs  functions.rs  index.rs  io.rs  mem.rs  references.rs  stack.rs
src/vm/memory_manager/: slot.rs  slot_ref.rs
src/vm/virtual_machine/: alu.rs  collections.rs  control.rs  functions.rs  index.rs  io.rs  math.rs  references.rs  stack.rs
stdlib/: system.asm
stdlib/src/: collections.lav  math.lav  stdlib.lav  string.lav  system.lav
