[package]
name = "lavendeux_parser"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug_compiler_internal = []

[profile.release]
debug = true

[dependencies]

# For lookup table generation
lazy_static = "1.4.0"

# For string to enum transformations
strum = {version = "0.26.2", features=["derive"]}
strum_macros = "0.26"

# For stack allocation during parsing
stacker = "0.1.15"

# Helper trait for the parser
optional_transpose = "0.1.0"

rand = "0.8.5"

# Serde, for serialization features
serde = "1.0.193"
serde_json = "1.0.108"

# Decimal Type
fpdec = {version = "0.10.3", features = ["serde-as-str"]}

# For String Type pattern matching
regex = "1.10.2"

# Tokenizer
logos = "0.14.0"

# Error type definitions
thiserror = "1.0.50"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "load_script"
harness = false

[[bench]]
name = "load_data"
harness = false